--- a/web/index.html
+++ b/web/index.html
@@ -33,9 +33,11 @@
   <meta name="apple-mobile-web-app-title" content="notebook">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>notebook</title>
+  <title>Notebook</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="splash/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
